--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -3,10 +3,30 @@
 <head>
 	<title>The Better Bookstore</title>
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<style>
+	body {background-color:rgb(84, 89, 94);}
+	h1 {color:white;}
+	</style>
 </head>
 <body>
+	<div class="container">
 	<h1>Booklist</h1>
-	<table>
+	<table class="table table-dark">
+		<thead>
+		<tr>
+		<th>Title</th>
+		<th>Author</th>
+		<th>Year</th>
+		<th>ISBN</th>
+		<th>Price (€)</th>
+		<th>-</th>
+		<th>-</th>
+		</tr>
+		</thead>
 		<tbody>
 			<tr th:each = "book : ${books}">
 				<td th:text = "${book.title}"></td>
@@ -14,10 +34,12 @@
 				<td th:text = "${book.year}"></td>
 				<td th:text = "${book.isbn}"></td>
 				<td th:text = "${book.price}"></td>
-				<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+				<td><a class="btn btn-success" th:href="@{/update/{id}(id=${book.id})}">Edit</a></td>
+				<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
 			</tr>
 		</tbody>
 	</table>
-	<a href="/add">Add Student</a>
+	<a href="/add" class="btn btn-success">Add Book</a>
+	</div>
 </body>
 </html>
