--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -36,6 +36,12 @@
 		<label for="p">Price</label>
 		<input class="form-control" type="text" id="p" th:field="*{price}"/>
 		</div>
+		<div class="form-group">
+		<label for="cat">Category</label>
+		<select id="cat" th:field="*{category}" class="form-control">
+			<option th:each="category: ${categories}" th:value="${category.idCategory}" th:text="${category.name}"></option>
+		</select>
+		</div>
 		<input type="submit" class="btn btn-success" value="Add"/>
 	</form>
 	</div>
