--- a/src/main/resources/templates/categorylist.html
+++ b/src/main/resources/templates/categorylist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-	<title>The Better Bookstore</title>
+	<title>The Better Bookstore: Categories</title>
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -14,34 +14,22 @@
 </head>
 <body>
 	<div class="container">
-	<h1>Booklist</h1>
+	<h1>Categories</h1>
 	<table class="table table-dark">
 		<thead>
 		<tr>
-		<th>Title</th>
-		<th>Author</th>
-		<th>Year</th>
-		<th>ISBN</th>
-		<th>Price (€)</th>
+		<th>ID</th>
 		<th>Category</th>
-		<th>-</th>
-		<th>-</th>
 		</tr>
 		</thead>
 		<tbody>
-			<tr th:each = "book : ${books}">
-				<td th:text = "${book.title}"></td>
-				<td th:text = "${book.author}"></td>
-				<td th:text = "${book.year}"></td>
-				<td th:text = "${book.isbn}"></td>
-				<td th:text = "${book.price}"></td>
-				<td th:text = "${book.category.name}"></td>
-				<td><a class="btn btn-success" th:href="@{/update/{id}(id=${book.id})}">Edit</a></td>
-				<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+			<tr th:each = "category : ${categories}">
+				<td th:text = "${category.idCategory}"></td>
+				<td th:text = "${category.name}"></td>
 			</tr>
 		</tbody>
 	</table>
-	<a href="/add" class="btn btn-success">Add Book</a>
+	<a href="/addc" class="btn btn-success">Add Category</a>
 	</div>
 </body>
 </html>
