--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 	<title>The Better Bookstore</title>
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
@@ -14,7 +14,19 @@
 </head>
 <body>
 	<div class="container">
-	<h1>Booklist</h1>
+	<div class="d-flex justify-content-center">
+	<div class="col-md-4">
+		<h1>Books</h1>
+	</div>
+	<div class="col-md-4">
+		<h1 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+	</div>
+	<div class="col-md-4" style="padding:20px 0">
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+		</form>
+	</div>
+	</div>
 	<table class="table table-dark">
 		<thead>
 		<tr>
@@ -24,8 +36,8 @@
 		<th>ISBN</th>
 		<th>Price (€)</th>
 		<th>Category</th>
-		<th>-</th>
-		<th>-</th>
+		<th sec:authorize="hasRole('ADMIN')">-</th>
+		<th sec:authorize="hasRole('ADMIN')">-</th>
 		</tr>
 		</thead>
 		<tbody>
@@ -36,8 +48,8 @@
 				<td th:text = "${book.isbn}"></td>
 				<td th:text = "${book.price}"></td>
 				<td th:text = "${book.category.name}"></td>
-				<td><a class="btn btn-success" th:href="@{/update/{id}(id=${book.id})}">Edit</a></td>
-				<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+				<td sec:authorize="hasRole('ADMIN')"><a class="btn btn-success" th:href="@{/update/{id}(id=${book.id})}">Edit</a></td>
+				<td sec:authorize="hasRole('ADMIN')"><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
 			</tr>
 		</tbody>
 	</table>
