--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -19,7 +19,7 @@
 		<h1>Books</h1>
 	</div>
 	<div class="col-md-4">
-		<h1 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+		<h1 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h1>
 	</div>
 	<div class="col-md-4" style="padding:20px 0">
 		<form th:action="@{/logout}" method="post">
@@ -36,8 +36,8 @@
 		<th>ISBN</th>
 		<th>Price (€)</th>
 		<th>Category</th>
-		<th sec:authorize="hasRole('ADMIN')">-</th>
-		<th sec:authorize="hasRole('ADMIN')">-</th>
+		<th sec:authorize="hasAuthority('ADMIN')">-</th>
+		<th sec:authorize="hasAuthority('ADMIN')">-</th>
 		</tr>
 		</thead>
 		<tbody>
@@ -48,8 +48,8 @@
 				<td th:text = "${book.isbn}"></td>
 				<td th:text = "${book.price}"></td>
 				<td th:text = "${book.category.name}"></td>
-				<td sec:authorize="hasRole('ADMIN')"><a class="btn btn-success" th:href="@{/update/{id}(id=${book.id})}">Edit</a></td>
-				<td sec:authorize="hasRole('ADMIN')"><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+				<td sec:authorize="hasAuthority('ADMIN')"><a class="btn btn-success" th:href="@{/update/{id}(id=${book.id})}">Edit</a></td>
+				<td sec:authorize="hasAuthority('ADMIN')"><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
 			</tr>
 		</tbody>
 	</table>
